<resources>
    <string name="app_name">MyFirstLearningApp</string>
    <string name="string_textField_fis">Fisica</string>
    <string name="string_textField_quim">Quimica</string>
    <string name="string_textField_mat">Matematicas</string>
    <string name="string_button_calculate">Calcular</string>
    <string name="string_textView_result">Nota: ?</string>
    <!--Calculator of radio buttons Activity (View)-->
    <string name="string_textField_radioCalculator_1">Num 1</string>
    <string name="string_textField_radioCalculator_2">Num 2</string>
    <string name="string_button_radioCalculator_calculate">Calcular</string>
    <string name="string_radioButton_radioCalculator_suma">Suma</string>
    <string name="string_radioButton_radioCalculator_resta">Resta</string>
    <string name="string_textView_radioCalculator_result">Resultado</string>

    <string name="string_radioButton_radioCalculator_mul">Multiplicacion</string>
    <string name="string_radioButton_radioCalculator_div">Division</string>

    <string name="string_imageButton_description">Descripcion generica</string>

    <string name="string_formValidation_name">Nombrea</string>
    <string name="string_formValidation_pass">Password</string>
    <string name="string_formValidation_button">Registrar</string>

    <string name="string_allActivities_mainCalculator">Main -calculator</string>
    <string name="string_allActivities_radioCalculator">Radio calculator</string>
    <string name="string_allActivities_screeCalculator">Screen calculator</string>
    <string name="string_allActivities_checklistCalculator">CheckList calculator</string>
    <string name="string_allActivities_spinnerSelectCalculator">Spinner Select calculator</string>
    <string name="string_allActivities_listViewNames">ListView Names</string>
    <string name="string_allActivities_imageButtons">Image Buttons</string>
    <string name="string_allActivities_formValidation">Form validation</string>
    <string name="string_allActivities_pasarDatoAOtraPantalla">Enviar Datos a Otra activity</string>
    <string name="string_allActivities_webView">Web View</string>
    <string name="string_allActivities_SharedPreferences">Shared Prefs</string>
    <string name="string_allActivities_ContactsSharedPreferences">Contactos con SharedPrefs</string>
    <string name="string_allActivities_Ficheros">Bitacora con Ficheros(txt)</string>

    <string name="string_allActivities_webView_TV">Introduzca Pagina web</string>
    <string name="string_allActivities_webView_ButtonSend">Enviar Datos</string>
    <string name="string_allActivities_webView_Button02">Atras</string>
    <string name="string_allActivities_DB">Uso de Base de Datos</string>

    <string name="string_SharedPreferences_titulo">Esto es una prueba de Shared Preferences</string>
    <string name="string_SharedPreferences_guardar">Guardar</string>

    <string name="string_ContactsSharedPreferences_nameText">Nombre del contacto</string>
    <string name="string_ContactsSharedPreferences_searchText">Datos del contacto</string>
    <string name="string_ContactsSharedPreferences_saveButton">Guardar</string>
    <string name="string_ContactsSharedPreferences_searchButton">Buscar</string>

    <string name="string_Fichero_saveButton">Guardar</string>

    <string name="string_DB_id">ID</string>
    <string name="string_DB_name">Nombre</string>
    <string name="string_DB_price">Precio</string>
    <string name="string_DB_registerButton">Registrar producto</string>
    <string name="string_DB_search">Buscar producto</string>
    <string name="string_DB_delete">Borrar producto</string>
    <string name="string_DB_edit">Modificar producto</string>

    <string name="string_calculator_01">1</string>
    <string name="string_calculator_02">2</string>
    <string name="string_calculator_03">3</string>
    <string name="string_calculator_04">4</string>
    <string name="string_calculator_05">5</string>
    <string name="string_calculator_06">6</string>
    <string name="string_calculator_07">7</string>
    <string name="string_calculator_08">8</string>
    <string name="string_calculator_09">9</string>
    <string name="string_calculator_00">0</string>
    <string name="string_calculator_mas">+</string>
    <string name="string_calculator_menos">-</string>
    <string name="string_calculator_por">*</string>
    <string name="string_calculator_igual">=</string>
    <string name="string_calculator_division">/</string>
    <string name="string_calculator_restaurar">Restaurar Valores</string>
    <string name="string_calculator_default">0</string>

    <string name="string_FrameLayout_buttonOcultar">Ocultar</string>

    <string name="string_ScrollView_descripcionButton">Ocultar</string>

    <string name="string_AudioPlayer_buttonMediaPlayer">Reproducir AudioPlayer</string>
    <string name="string_AudioPlayer_SoundPool">Reproducir Soundpool</string>


    <string name="string_CustomMenu_Item1">Opcion 1</string>
    <string name="string_CustomMenu_Item2">Opcion 2</string>
    <string name="string_CustomMenu_Item3">Opcion 3</string>
</resources>